--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@
 
 
 body{
-    font-family: 'Noto Serif Khojki', serif;
+    font-family: 'Bricolage Grotesque', sans-serif;
     background-color:#FAF9F6;
+    background-color: #ffffff;
+
+
 }
